src/objects/OrdeVolumeType__c.object
<CustomObject>
    <fields>
        <fullName>IsDefault__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsDefault</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ProductGroup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ProductGroup</label>
        <referenceTo>ProductGroup__c</referenceTo>
        <relationshipLabel>OrdeVolumeTypes</relationshipLabel>
        <relationshipName>OrdeVolumeTypes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>OrdeVolumeTypes</relationshipLabel>
        <relationshipName>OrdeVolumeTypes</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>OrdeVolumeType</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>OrdeVolumeType Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>OrdeVolumeTypes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>